force-app/main/default/objects/Asset/fields/Allocated_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Allocated Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>