force-app/main/default/objects/Asset/fields/External_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Serial_Number__c</fullName>
    <externalId>true</externalId>
    <label>External Serial Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>