force-app/main/default/objects/Asset/fields/Input_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Input_Quantity__c</fullName>
    <label>[Insert] Input Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>