force-app/main/default/objects/Asset/fields/ModelNo__c.field-meta.xml
<CustomField>
    <fullName>ModelNo__c</fullName>
    <label>Model No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>