force-app/main/default/objects/Asset/fields/ReplacedBy__c.field-meta.xml
<CustomField>
    <fullName>ReplacedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replaced By</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>