force-app/main/default/objects/Asset/fields/Return_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Return_Quantity__c</fullName>
    <label>[Insert] Return Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>