force-app/main/default/objects/Asset/fields/Write_off_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Write_off_Quantity__c</fullName>
    <label>[Insert] Write-off Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>