force-app/main/default/objects/Asset/validationRules/Negative_Input_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Input_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Input_Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Input_Quantity__c</errorDisplayField>
    <errorMessage>Input quantity must be greater than 0</errorMessage>
</ValidationRule>