force-app/main/default/objects/Asset/validationRules/Negative_Return_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Return_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Return_Quantity__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Return_Quantity__c</errorDisplayField>
    <errorMessage>Return quantity must be greater than 0</errorMessage>
</ValidationRule>