force-app/main/default/objects/Asset/validationRules/Negative_WriteOff_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_WriteOff_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Write_off_Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Write_off_Quantity__c</errorDisplayField>
    <errorMessage>Write-off quantity must be greater than 0</errorMessage>
</ValidationRule>