force-app/main/default/objects/Asset/validationRules/Return_Quantity_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Quantity_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Return_Quantity__c &gt;  Allocated_Quantity__c</errorConditionFormula>
    <errorDisplayField>Return_Quantity__c</errorDisplayField>
    <errorMessage>Return quantity must not be greater than the Allocated Quantity</errorMessage>
</ValidationRule>