force-app/main/default/objects/Asset/validationRules/Write_off_Quantity_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Write_off_Quantity_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Write_off_Quantity__c &gt;  Allocated_Quantity__c</errorConditionFormula>
    <errorDisplayField>Write_off_Quantity__c</errorDisplayField>
    <errorMessage>Write-off quantity must not be greater than Allocated quantity</errorMessage>
</ValidationRule>